[workspace] 
members = [
    "crates/tree-splicer",
    "crates/tree-splicer-cmake",
    "crates/tree-splicer-javascript",
    "crates/tree-splicer-regex",
    "crates/tree-splicer-rust",
    "crates/tree-splicer-sql",
    "crates/tree-splicer-typescript",
]

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
lto = true