[package]
name = "tree-splicer-sql"
description = "Simple grammar-based SQL query generator"
version = "0.2.0"
keywords = ["black-box", "fuzzer", "grammar-based", "sql"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-splicer"
repository = "https://github.com/langston-barrett/tree-splicer"

[dependencies]
anyhow = "1"
tree-splicer = { version = "0.2.0", path = "../tree-splicer", features = ["cli"] }
tree-sitter-sql = { path = "../../../tree-sitter-sql" }